<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- System Generated Strings -->

    <string name="app_name">Dota 2 Central</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_spash_screen">SpashScreen</string>
    <string name="title_activity_match_history">MatchHistory</string>
    <string name="title_activity_match_details">MatchDetails</string>
    <string name="title_activity_friend_profile">FriendProfile</string>

    <!-- User Defined Strings -->

    <string name="signup_url_head">Please enter your Steam Custom Url</string>
    <string name="signup_url_hint">steamcommunity.com/</string>
    <string name="signup_check_msg">I have enabled "Allow 3rd Party Access" in my Dota 2 Game Settings</string>
    <string name="signup_submit">Submit</string>
    <string name="last_logout">last seen 0 mins ago</string>
    <string name="profile_name">Lorem Ipsum</string>
    <string name="dashboard_default_value">calculating</string>
    <string name="dashboard_wins_text">wins</string>
    <string name="dashboard_win_ratio_text">win rate - </string>
    <string name="dashboard_notification_text">new notifications</string>
    <string name="dashboard_recent_matches_text">Recent Matches</string>
    <string name="dashboard_default_hero_name">Hero Name</string>
    <string name="dashboard_default_hero_date">01 January</string>
    <string name="dashboard_default_hero_time">12:00am</string>
    <string name="dashboard_default_seperator">-</string>
    <string name="dashboard_view_all_text">View All</string>
    <string name="filters_label_text">FILTERS</string>
    <string name="filters_add_label_text">add filters</string>
    <string name="filters_edit_label_text">edit filters</string>
    <string name="filters_remove_label_text">remove filters</string>
    <string name="match_details_hits">HITS</string>
    <string name="match_details_kills">K</string>
    <string name="match_details_deaths">D</string>
    <string name="match_details_assists">A</string>
    <string name="match_details_gpm_label">GOLD/MIN</string>
    <string name="match_details_xpm_label">XP/MIN</string>
    <string name="enable_doodle">enable doodle</string>
    <string name="clear_doodle">clear doodle</string>
    <string name="exit_doodle">exit doodle</string>
    <string name="share_image">share image</string>
    <string name="add_note_label_text">ADD NOTE</string>
    <string name="title_activity_hero_filter">HeroFilter</string>
    <string name="highest">HIGHEST</string>
    <string name="lowest">LOWEST</string>
    <string name="no">no</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notification_setting_text">Update Notifications Every 30 mins</string>

</resources>
